// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components Card renders correctly 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <p>
      Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`components Card supports extra arguments 1`] = `
<DocumentFragment>
  <li
    class="card extra"
  >
    <p>
      Text
    </p>
  </li>
</DocumentFragment>
`;
